force-app/main/default/objects/Follow_Up_Rule_Configuration__c/Follow_Up_Rule_Configuration__c.object-meta.xml
<CustomObject>
    <label>Follow-Up Rule/CSAT Configuration</label>
    <nameField>
        <displayFormat>FUC-{0000}</displayFormat>
        <label>Follow-Up Rule/CSAT Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Follow-Up Rule/CSAT Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>