force-app/main/default/objects/Follow_Up_Rule_Configuration__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Follow_Up_Rule_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>