force-app/main/default/objects/Follow_Up_Rule_Configuration__c/fields/AR_Closure_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>AR_Closure_Occurrence__c</fullName>
    <label>AR Closure Occurrence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 business days after 1st FU</fullName>
            </value>
            <value>
                <fullName>Immediately after 3rd FU</fullName>
            </value>
            <value>
                <fullName>1 business day after 3rd FU</fullName>
            </value>
            <value>
                <fullName>2 business days after 3rd FU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>