force-app/main/default/objects/Follow_Up_Rule_Configuration__c/fields/AR_Not_Resolved_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>AR_Not_Resolved_Email_Template__c</fullName>
    <label>AR Not Resolved Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>