force-app/main/default/objects/Follow_Up_Rule_Configuration__c/fields/AR_Source__c.field-meta.xml
<CustomField>
    <fullName>AR_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AR Source</label>
    <referenceTo>Picklist_Value__c</referenceTo>
    <relationshipName>Follow_Up_Rule_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>