force-app/main/default/objects/Follow_Up_Rule_Configuration__c/fields/AU_FU_Comments_Recipient__c.field-meta.xml
<CustomField>
    <fullName>AU_FU_Comments_Recipient__c</fullName>
    <label>AU FU Comments Recipient</label>
    <type>Email</type>
</CustomField>