force-app/main/default/objects/Follow_Up_Rule_Configuration__c/fields/CSAT_expiration_days__c.field-meta.xml
<CustomField>
    <fullName>CSAT_expiration_days__c</fullName>
    <label>CSAT expiration (days)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>