force-app/main/default/objects/Follow_Up_Rule_Configuration__c/fields/FollowUpConfigurationKey__c.field-meta.xml
<CustomField>
    <fullName>FollowUpConfigurationKey__c</fullName>
    <formula>Account__c &amp; TEXT( Language__c ) &amp;  AR_Source__c &amp;  Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FollowUpConfigurationKey</label>
    <type>Text</type>
</CustomField>