force-app/main/default/objects/Follow_Up_Rule_Configuration__c/fields/From_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Email_Address__c</fullName>
    <label>From Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>