force-app/main/default/objects/Follow_Up_Rule_Configuration__c/fields/Number_of_FU_prior_to_closure__c.field-meta.xml
<CustomField>
    <fullName>Number_of_FU_prior_to_closure__c</fullName>
    <label>Number of FU prior to closure</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>