force-app/main/default/objects/Follow_Up_Rule_Configuration__c/fields/Participate_with_CSAT__c.field-meta.xml
<CustomField>
    <fullName>Participate_with_CSAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Participate with CSAT</label>
    <type>Checkbox</type>
</CustomField>