force-app/main/default/objects/Follow_Up_Rule_Configuration__c/fields/Survey_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Survey_Email_Template__c</fullName>
    <label>Survey Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>