force-app/main/default/objects/Follow_Up_Rule_Configuration__c/fields/Survey_Reminder_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Survey_Reminder_Email_Template__c</fullName>
    <label>Survey Reminder Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>