force-app/main/default/objects/Follow_Up_Rule_Configuration__c/fields/X1st_FU_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>X1st_FU_Email_Template__c</fullName>
    <label>1st FU Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>