force-app/main/default/objects/Follow_Up_Rule_Configuration__c/fields/X1st_FU_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>X1st_FU_Occurrence__c</fullName>
    <label>1st FU Occurrence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Immediately</label>
            </value>
            <value>
                <fullName>0.5</fullName>
                <label>After 30 Minutes</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>After 1 Business day</label>
            </value>
            <value>
                <fullName>48</fullName>
                <label>After 2 Business days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>