force-app/main/default/objects/Follow_Up_Rule_Configuration__c/fields/X2nd_FU_EmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>X2nd_FU_EmailTemplate__c</fullName>
    <label>2nd FU EmailTemplate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>