force-app/main/default/objects/Follow_Up_Rule_Configuration__c/fields/X3rd_FU_EmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>X3rd_FU_EmailTemplate__c</fullName>
    <label>3rd FU EmailTemplate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>