force-app/main/default/objects/Follow_Up_Rule_Configuration__c/fields/X3rd_FU_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>X3rd_FU_Occurrence__c</fullName>
    <label>3rd FU Occurrence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>24</fullName>
                <label>1 business day after 2nd FU</label>
            </value>
            <value>
                <fullName>48</fullName>
                <label>2 business days after 2nd FU</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>