force-app/main/default/objects/Follow_Up_Rule_Configuration__c/recordTypes/CSAT_Configuration.recordType-meta.xml
<RecordType>
    <fullName>CSAT_Configuration</fullName>
    <active>true</active>
    <label>CSAT Configuration</label>
</RecordType>