force-app/main/default/objects/Follow_Up_Rule_Configuration__c/recordTypes/Followup_Configuration.recordType-meta.xml
<RecordType>
    <fullName>Followup_Configuration</fullName>
    <active>true</active>
    <label>Followup Configuration</label>
</RecordType>