force-app/main/default/objects/Follow_Up_Rule_Configuration__c/listViews/AUF.listView-meta.xml
<ListView>
    <fullName>AUF</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Account__c</columns>
    <columns>AR_Source__c</columns>
    <columns>Language__c</columns>
    <columns>From_Email_Address__c</columns>
    <columns>X1st_FU_Email_Template__c</columns>
    <columns>X2nd_FU_EmailTemplate__c</columns>
    <columns>X3rd_FU_EmailTemplate__c</columns>
    <columns>AU_FU_Comments_Recipient__c</columns>
    <columns>AR_Not_Resolved_Email_Template__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Follow_Up_Rule_Configuration__c.Followup_Configuration</value>
    </filters>
    <label>AUF</label>
</ListView>