force-app/main/default/objects/Follow_Up_Rule_Configuration__c/listViews/CSAT.listView-meta.xml
<ListView>
    <fullName>CSAT</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Account__c</columns>
    <columns>AR_Source__c</columns>
    <columns>Language__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Follow_Up_Rule_Configuration__c.CSAT_Configuration</value>
    </filters>
    <label>CSAT</label>
</ListView>